// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GroupedStandings > renders empty groups 1`] = `
"<div>
  <div class="mb-8">
    <h3 class="text-xl font-bold mb-2 text-center text-white">Empty Group</h3>
    <table class="w-4/5 m-auto text-white table-fixed">
      <thead>
        <tr>
          <th class="w-12">Position</th>
          <th class="w-16">Team</th>
          <!--v-if-->
          <!--v-if-->
          <th class="w-10">GP</th>
          <th class="w-10">W</th>
          <th class="w-10">L</th>
          <th class="w-10">OTL</th>
          <th class="w-10">PTS</th>
          <th class="w-10">ROW</th>
          <th class="w-10">GF</th>
          <th class="w-10">GA</th>
          <th class="w-10">Diff</th>
          <th class="w-16">Home</th>
          <th class="w-16">Away</th>
          <th class="w-14">L10</th>
          <th class="w-12">Streak</th>
        </tr>
      </thead>
      <tbody></tbody>
    </table>
  </div>
</div>"
`;

exports[`GroupedStandings > renders group sections 1`] = `
"<div>
  <div class="mb-8">
    <h3 class="text-xl font-bold mb-2 text-center text-white">Eastern Conference</h3>
    <table class="w-4/5 m-auto text-white table-fixed">
      <thead>
        <tr>
          <th class="w-12">Position</th>
          <th class="w-16">Team</th>
          <!--v-if-->
          <!--v-if-->
          <th class="w-10">GP</th>
          <th class="w-10">W</th>
          <th class="w-10">L</th>
          <th class="w-10">OTL</th>
          <th class="w-10">PTS</th>
          <th class="w-10">ROW</th>
          <th class="w-10">GF</th>
          <th class="w-10">GA</th>
          <th class="w-10">Diff</th>
          <th class="w-16">Home</th>
          <th class="w-16">Away</th>
          <th class="w-14">L10</th>
          <th class="w-12">Streak</th>
        </tr>
      </thead>
      <tbody>
        <tr class="even:bg-zinc-600 text-center">
          <td style="background: #b9112d; color: white; font-size: 1.8em;">1</td>
          <td class="w-16"><a href="/player-stats/TOR" class="flex justify-center"><img src="/logos/SVG/TOR.svg" class="h-10 cursor-pointer hover:scale-110 transition-transform" alt="Toronto Maple Leafs" title="Toronto Maple Leafs"></a></td>
          <!--v-if-->
          <!--v-if-->
          <td>50</td>
          <td>30</td>
          <td>15</td>
          <td>5</td>
          <td class="font-bold">65</td>
          <td>28</td>
          <td>150</td>
          <td>120</td>
          <td>+30</td>
          <td>15-5-5</td>
          <td>15-10-0</td>
          <td>7-3-0</td>
          <td>W3</td>
        </tr>
        <tr class="even:bg-zinc-600 text-center">
          <td style="background: #b9112d; color: white; font-size: 1.8em;">2</td>
          <td class="w-16"><a href="/player-stats/MTL" class="flex justify-center"><img src="/logos/SVG/MTL.svg" class="h-10 cursor-pointer hover:scale-110 transition-transform" alt="Montreal Canadiens" title="Montreal Canadiens"></a></td>
          <!--v-if-->
          <!--v-if-->
          <td>50</td>
          <td>30</td>
          <td>15</td>
          <td>5</td>
          <td class="font-bold">65</td>
          <td>28</td>
          <td>150</td>
          <td>120</td>
          <td>+30</td>
          <td>15-5-5</td>
          <td>15-10-0</td>
          <td>7-3-0</td>
          <td>W3</td>
        </tr>
      </tbody>
    </table>
  </div>
  <div class="mb-8">
    <h3 class="text-xl font-bold mb-2 text-center text-white">Western Conference</h3>
    <table class="w-4/5 m-auto text-white table-fixed">
      <thead>
        <tr>
          <th class="w-12">Position</th>
          <th class="w-16">Team</th>
          <!--v-if-->
          <!--v-if-->
          <th class="w-10">GP</th>
          <th class="w-10">W</th>
          <th class="w-10">L</th>
          <th class="w-10">OTL</th>
          <th class="w-10">PTS</th>
          <th class="w-10">ROW</th>
          <th class="w-10">GF</th>
          <th class="w-10">GA</th>
          <th class="w-10">Diff</th>
          <th class="w-16">Home</th>
          <th class="w-16">Away</th>
          <th class="w-14">L10</th>
          <th class="w-12">Streak</th>
        </tr>
      </thead>
      <tbody>
        <tr class="even:bg-zinc-600 text-center">
          <td style="background: #003872; color: white; font-size: 1.8em;">1</td>
          <td class="w-16"><a href="/player-stats/VGK" class="flex justify-center"><img src="/logos/SVG/VGK.svg" class="h-10 cursor-pointer hover:scale-110 transition-transform" alt="Vegas Golden Knights" title="Vegas Golden Knights"></a></td>
          <!--v-if-->
          <!--v-if-->
          <td>50</td>
          <td>30</td>
          <td>15</td>
          <td>5</td>
          <td class="font-bold">65</td>
          <td>28</td>
          <td>150</td>
          <td>120</td>
          <td>+30</td>
          <td>15-5-5</td>
          <td>15-10-0</td>
          <td>7-3-0</td>
          <td>W3</td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;

exports[`GroupedStandings > renders with division column 1`] = `
"<div>
  <div class="mb-8">
    <h3 class="text-xl font-bold mb-2 text-center text-white">Division Group</h3>
    <table class="w-4/5 m-auto text-white table-fixed">
      <thead>
        <tr>
          <th class="w-12">Position</th>
          <th class="w-16">Team</th>
          <th class="w-16">Division</th>
          <!--v-if-->
          <th class="w-10">GP</th>
          <th class="w-10">W</th>
          <th class="w-10">L</th>
          <th class="w-10">OTL</th>
          <th class="w-10">PTS</th>
          <th class="w-10">ROW</th>
          <th class="w-10">GF</th>
          <th class="w-10">GA</th>
          <th class="w-10">Diff</th>
          <th class="w-16">Home</th>
          <th class="w-16">Away</th>
          <th class="w-14">L10</th>
          <th class="w-12">Streak</th>
        </tr>
      </thead>
      <tbody>
        <tr class="even:bg-zinc-600 text-center">
          <td style="background: #b9112d; color: white; font-size: 1.8em;">1</td>
          <td class="w-16"><a href="/player-stats/TOR" class="flex justify-center"><img src="/logos/SVG/TOR.svg" class="h-10 cursor-pointer hover:scale-110 transition-transform" alt="Toronto Maple Leafs" title="Toronto Maple Leafs"></a></td>
          <td>ATLANTIC</td>
          <!--v-if-->
          <td>50</td>
          <td>30</td>
          <td>15</td>
          <td>5</td>
          <td class="font-bold">65</td>
          <td>28</td>
          <td>150</td>
          <td>120</td>
          <td>+30</td>
          <td>15-5-5</td>
          <td>15-10-0</td>
          <td>7-3-0</td>
          <td>W3</td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;
